# movie-streamlit

./: README.md  app.py  pyproject.toml
data/: meta.parquet  movie.parquet  movie_after_2024.parquet  movie_after_2024_fix.parquet  movie_merge.parquet
