[project]
name = "movie-streamlit"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "ppabam", email = "tom@diginori.com"},
]
dependencies = ["streamlit>=1.43.2", "matplotlib>=3.10.1", "seaborn>=0.13.2"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
